tests/baselines/reference/contextualClassMethodParameter21.errors.txt
tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter21.ts(6,12): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== tests/cases/conformance/classes/contextualClassMethodParameter/contextualClassMethodParameter21.ts (1 errors) ====
    class Base {
        method<T>(x: T) { }
    }
    
    class Derived extends Base {
        method(x) { }
               ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }
    